--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "classnames": "^2.3.2",
+    "constate": "^3.3.2",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
