--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.3",
+    "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.4.0",
     "@tanstack/react-query": "^4.10.0",
@@ -31,7 +32,8 @@
     "react-select": "^5.4.0",
     "superjson": "1.9.1",
     "uuid": "^9.0.0",
-    "zod": "^3.18.0"
+    "zod": "^3.18.0",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
