Too much for one commit:
- loads of refactoring
- recipe api work
- basics of recipe-creation pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,6 @@
     "baseUrl": "src"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "**/*.cjs", "**/*.mjs"],
-  "exclude": [
-    "node_modules",
-    // this is an odd module, no need to lint
-    // why cam't I ignore this file?
-    "src/styles/forms.js"
-  ],
+  "exclude": ["node_modules", "src/styles/forms.js"],
   "composite": true
 }
