--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/server": "10.0.0-proxy-beta.17",
     "classnames": "^2.3.2",
     "constate": "^3.3.2",
+    "cuid": "^2.1.8",
     "next": "12.3.1",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
