--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@trpc/next": "10.0.0-proxy-beta.17",
     "@trpc/react": "10.0.0-proxy-beta.17",
     "@trpc/server": "10.0.0-proxy-beta.17",
+    "@vercel/og": "^0.0.20",
     "classnames": "^2.3.2",
     "constate": "^3.3.2",
     "cuid": "^2.1.8",
